ï¿Restructuration of components and cuter animations

--- a/main.css
+++ b/main.css
@@ -63,16 +63,24 @@ textarea {
 }
 
 main {
-    margin: 1rem;
+    padding: 1rem 0;
     background: white;
     max-width: 60ch;
-    border-left: 6px solid var(--accent-color);
+    border-left: 12px solid var(--accent-color);
+    border-radius: 1px;
     outline: 2px solid white;
     box-shadow: 0 0 0 6px #333;
 
     @media print {
         margin: 2rem;
     }
+
+    transform: translateY(0) scale(1.0);
+    transition: transform 0.15s ease-out;
+}
+
+main.pre-anim {
+    transform: translateY(100vh) scale(0.3);
 }
 
 input[type="text"], textarea, select {
@@ -103,12 +111,13 @@ input[type="submit"] {
 .wrapper {
     background: var(--accent-color);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     place-content: center;
     place-items: center;
     min-height: 100vh;
     transition: background-color 500ms ease-in-out;
     font-size: 120%;
+    padding: 1rem;
 
     @media print {
         background: white;
