--- a/src/views/index.scss
+++ b/src/views/index.scss
@@ -1,47 +1,28 @@
 .sign-form {
+  z-index: 20;
+
   h1 {
     font-size: 200%;
     padding: 0.5rem 1rem;
   }
 }
 
-.sign-select-list {
-  overflow-y: scroll;
-  max-height: 24rem;
-  padding: 0.5rem 1rem;
+.sidebar {
+  z-index: 10;
+  max-width: 30rem;
+  transition: transform 0.1s ease-out;
+  transform: translateX(0) scale(1.0);
+  border-radius: 0.25rem;
+  outline: 4px solid #333;
+  background: white;
+
+  &.pre-anim {
+    transform: translateX(-100%) scale(0.7);
+    opacity: 0;
+  }
 }
 
-.sign-select-button {
-  display: block;
-  margin: 0.5rem 0;
-  padding: 0 0.5rem;
-  border-radius: 0.25rem;
-  background: #eee;
-
-  &:hover, &:active {
-    background: #ddd;
-  }
-
-  .sign-select-button-title {
-    font-size: 110%;
-  }
-
-  .sign-select-button-room-name {
-    color: var(--accent-color);
-  }
-
-  .sign-select-button-subtitle {
-    font-size: 80%;
-    color: #0008;
-  }
-
-  .sign-select-button-url {
-    font-size: 80%;
-    color: var(--accent-color);
-  }
-
-  .sign-select-button-content {
-    font-size: 80%;
-    color: #0008;
-  }
+h2.sign-list-title {
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
 }
