--- a/src/components/sign_form.scss
+++ b/src/components/sign_form.scss
@@ -21,6 +21,8 @@
     flex-direction: column;
     width: 5rem;
     height: 5rem;
+    transition: transform 0.1s ease-in-out;
+    transform: translateY(0);
     background: var(--accent-color-light);
     place-content: center;
     place-items: center;
@@ -33,6 +35,7 @@
     }
 
     &.selected {
+      transform: translateY(-0.25rem);
       border-radius: 1px;
       outline: 3px solid var(--accent-color);
       box-shadow: 0 0 0 4px black;
