--- a/src/views/display.scss
+++ b/src/views/display.scss
@@ -3,9 +3,12 @@
   display: flex;
   align-items: center;
   flex-direction: row;
+  max-width: 80rem;
+  padding: 1rem;
+  gap: 1rem;
 
   &.printed-small {
-    max-width: 70ch;
+    max-width: 60rem;
   }
 }
 
